--- a/src/main/resources/View/editRoomPane.fxml
+++ b/src/main/resources/View/editRoomPane.fxml
@@ -121,7 +121,7 @@
                         <Insets left="50.0" right="10.0" top="10.0" />
                      </HBox.margin>
                   </Label>
-                  <ComboBox fx:id="typeComboBox" prefWidth="200.0" styleClass="combobox">
+                  <ComboBox fx:id="typeComboBox" prefHeight="43.0" prefWidth="200.0" styleClass="combobox">
                      <HBox.margin>
                         <Insets left="53.0" />
                      </HBox.margin>
@@ -144,7 +144,7 @@
                         <Insets left="50.0" />
                      </HBox.margin>
                   </Label>
-                  <TextField fx:id="rentingpriceText" prefWidth="200.0" styleClass="textField2">
+                  <TextField fx:id="rentingpriceText" onKeyReleased="#TextChange" prefHeight="45.0" prefWidth="200.0" styleClass="textField2">
                      <HBox.margin>
                         <Insets left="88.0" />
                      </HBox.margin>
@@ -157,7 +157,15 @@
                   <Insets top="20.0" />
                </VBox.margin>
             </HBox>
-            <BorderPane prefHeight="200.0" prefWidth="200.0">
+            <Label fx:id="rentPriceError" text="Label" textFill="RED" visible="false">
+               <font>
+                  <Font name="Segoe UI" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="210.0" />
+               </VBox.margin>
+            </Label>
+            <BorderPane prefHeight="50.0" prefWidth="200.0">
                <left>
                   <Button mnemonicParsing="false" onAction="#backbtn" styleClass="appBtn-red" text="Quay lại" BorderPane.alignment="CENTER">
                      <font>
@@ -172,7 +180,7 @@
                   </Button>
                </left>
                <right>
-                  <Button mnemonicParsing="false" onAction="#updatedata" prefWidth="100.0" styleClass="appBtn-green" text="Lưu" BorderPane.alignment="CENTER">
+                  <Button fx:id="updateBtn" mnemonicParsing="false" onAction="#updatedata" prefWidth="100.0" styleClass="appBtn-green" text="Lưu" BorderPane.alignment="CENTER">
                      <font>
                         <Font name="Segoe UI Bold" size="18.0" />
                      </font>
