--- a/src/main/resources/View/loginForm.fxml
+++ b/src/main/resources/View/loginForm.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -79,14 +80,11 @@
                                         <ImageView fx:id="passwordIcon" fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true" />
                                     </center>
                                 </BorderPane>
-                                <TextField fx:id="passwordText" onMouseClicked="#action" promptText="Mật khẩu" styleClass="textField" stylesheets="@../styles/main.css">
-                                    <font>
-                                        <Font name="Segoe UI" size="22" />
-                                    </font>
-                                    <HBox.margin>
-                                        <Insets top="1" />
-                                    </HBox.margin>
-                                </TextField>
+                        <PasswordField fx:id="passwordText" onMouseClicked="#action" prefHeight="42.0" prefWidth="273.0" promptText="Mật khẩu" styleClass="textField" stylesheets="@../styles/main.css">
+                           <font>
+                              <Font name="Segoe UI" size="22.0" />
+                           </font>
+                        </PasswordField>
                             </children>
                             <VBox.margin>
                                 <Insets top="30.0" />
@@ -122,16 +120,6 @@
                      <top>
                         <Line endX="232.5" startX="-100.0" stroke="#00000051" BorderPane.alignment="CENTER" />
                      </top>
-                     <right>
-                        <Label text="Quên mật khẩu?" textFill="#0000009d" BorderPane.alignment="CENTER">
-                           <font>
-                              <Font name="Segoe UI" size="12.0" />
-                           </font>
-                           <BorderPane.margin>
-                              <Insets bottom="20.0" right="40.0" />
-                           </BorderPane.margin>
-                        </Label>
-                     </right>
                      <VBox.margin>
                         <Insets top="30.0" />
                      </VBox.margin>
