complete validate input

--- a/src/main/resources/View/editEmployee.fxml
+++ b/src/main/resources/View/editEmployee.fxml
@@ -12,12 +12,12 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="550.0" styleClass="casualPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.dormmanagement.EditEmployeeController">
+<AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="550.0" styleClass="casualPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.dormmanagement.EditEmployeeController">
     <stylesheets>
         <URL value="@/styles/main.css" />
     </stylesheets>
     <children>
-      <VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="0.0">
+      <VBox alignment="CENTER_LEFT" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox alignment="CENTER_LEFT">
                <children>
@@ -49,12 +49,20 @@
                         <Insets />
                      </HBox.margin>
                   </Label>
-                  <TextField fx:id="nameText" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
+                  <TextField fx:id="nameText" onKeyReleased="#TextChange" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
                </children>
                <VBox.margin>
                   <Insets top="15.0" />
                </VBox.margin>
             </HBox>
+            <Label fx:id="nameError" text="Label" textFill="RED" visible="false">
+               <font>
+                  <Font name="Segoe UI" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="250.0" />
+               </VBox.margin>
+            </Label>
             <HBox alignment="CENTER" layoutX="10.0" layoutY="33.0">
                <children>
                   <Label prefWidth="150.0" text="Ngày sinh">
@@ -62,12 +70,20 @@
                         <Font name="Segoe UI Bold" size="18.0" />
                      </font>
                   </Label>
-                  <DatePicker fx:id="birthdayPicker" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
+                  <DatePicker fx:id="birthdayPicker" onAction="#TextChange" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
                </children>
                <VBox.margin>
-                  <Insets top="15.0" />
+                  <Insets top="5.0" />
                </VBox.margin>
             </HBox>
+            <Label fx:id="birthdayError" layoutX="10.0" layoutY="683.0" text="Label" textFill="RED" visible="false">
+               <font>
+                  <Font name="Segoe UI" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="250.0" />
+               </VBox.margin>
+            </Label>
             <HBox alignment="CENTER" layoutX="10.0" layoutY="56.0">
                <children>
                   <Label prefWidth="150.0" text="Địa chỉ">
@@ -75,12 +91,20 @@
                         <Font name="Segoe UI Bold" size="18.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="addressText" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
+                  <TextField fx:id="addressText" onKeyReleased="#TextChange" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
                </children>
                <VBox.margin>
-                  <Insets top="15.0" />
+                  <Insets top="5.0" />
                </VBox.margin>
             </HBox>
+            <Label fx:id="addressError" layoutX="10.0" layoutY="691.0" text="Label" textFill="RED" visible="false">
+               <font>
+                  <Font name="Segoe UI" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="250.0" />
+               </VBox.margin>
+            </Label>
             <HBox alignment="CENTER" layoutX="10.0" layoutY="79.0">
                <children>
                   <Label prefWidth="150.0" text="Vị trí">
@@ -91,7 +115,7 @@
                   <ComboBox fx:id="positionCombo" prefHeight="45.0" prefWidth="200.0" styleClass="combobox" />
                </children>
                <VBox.margin>
-                  <Insets top="15.0" />
+                  <Insets top="5.0" />
                </VBox.margin>
             </HBox>
             <HBox alignment="CENTER" layoutX="10.0" layoutY="102.0">
@@ -101,22 +125,33 @@
                         <Font name="Segoe UI Bold" size="18.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="phoneText" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
+                  <TextField fx:id="phoneText" onKeyReleased="#TextChange" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
                </children>
                <VBox.margin>
-                  <Insets top="15.0" />
+                  <Insets top="20.0" />
                </VBox.margin>
             </HBox>
+            <Label fx:id="phoneError" layoutX="10.0" layoutY="695.0" text="Label" textFill="RED" visible="false">
+               <font>
+                  <Font name="Segoe UI" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="250.0" />
+               </VBox.margin>
+            </Label>
             <HBox alignment="CENTER_RIGHT">
                <children>
-                  <Button mnemonicParsing="false" onAction="#updateEmployee" styleClass="buttonindashboard" text="Chỉnh sửa thông tin cá nhân">
+                  <Button fx:id="employeeUpdateBtn" disable="true" mnemonicParsing="false" onAction="#updateEmployee" styleClass="buttonindashboard" text="Chỉnh sửa thông tin cá nhân">
                      <font>
                         <Font name="Segoe UI Bold" size="18.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets right="50.0" />
+                     </HBox.margin>
                   </Button>
                </children>
                <VBox.margin>
-                  <Insets right="50.0" top="15.0" />
+                  <Insets top="5.0" />
                </VBox.margin>
             </HBox>
             <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="125.0">
@@ -146,12 +181,20 @@
                         <Font name="Segoe UI Bold" size="18.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="passwordText" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
+                  <TextField fx:id="passwordText" onKeyReleased="#TextChange" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
                </children>
                <VBox.margin>
                   <Insets top="15.0" />
                </VBox.margin>
             </HBox>
+            <Label fx:id="passError" layoutX="10.0" layoutY="393.0" text="Label" textFill="RED" visible="false">
+               <font>
+                  <Font name="Segoe UI" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="250.0" />
+               </VBox.margin>
+            </Label>
             <HBox alignment="CENTER" layoutX="10.0" layoutY="171.0">
                <children>
                   <Label prefWidth="150.0" text="Quyền">
@@ -162,12 +205,12 @@
                   <ComboBox fx:id="permissionCombo" prefHeight="45.0" prefWidth="200.0" styleClass="combobox" />
                </children>
                <VBox.margin>
-                  <Insets top="15.0" />
+                  <Insets top="5.0" />
                </VBox.margin>
             </HBox>
             <HBox alignment="CENTER_RIGHT" layoutX="10.0" layoutY="278.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#updateAccount" styleClass="buttonindashboard" text="Chỉnh sửa tài khoản">
+                  <Button fx:id="accountUpdateBtn" disable="true" mnemonicParsing="false" onAction="#updateAccount" styleClass="buttonindashboard" text="Chỉnh sửa tài khoản">
                      <font>
                         <Font name="Segoe UI Bold" size="18.0" />
                      </font>
@@ -185,7 +228,7 @@
                   <Font name="Segoe UI Bold" size="18.0" />
                </font>
                <VBox.margin>
-                  <Insets left="30.0" top="15.0" />
+                  <Insets left="230.0" top="15.0" />
                </VBox.margin>
             </Button>
          </children>
