--- a/src/main/resources/View/accountPane.fxml
+++ b/src/main/resources/View/accountPane.fxml
@@ -97,7 +97,7 @@
             </HBox>
          </bottom>
          <right>
-            <VBox alignment="TOP_CENTER" prefHeight="200.0">
+            <VBox alignment="CENTER_LEFT" prefHeight="200.0">
                <children>
                   <HBox alignment="CENTER">
                      <children>
@@ -115,6 +115,9 @@
                      <font>
                         <Font name="Segoe UI" size="12.0" />
                      </font>
+                     <VBox.margin>
+                        <Insets left="120.0" />
+                     </VBox.margin>
                   </Label>
                   <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0">
                      <children>
@@ -129,10 +132,13 @@
                         <Insets />
                      </VBox.margin>
                   </HBox>
-                  <Label fx:id="birthdayError" layoutX="156.0" layoutY="485.0" text="Không được để trống" textFill="RED" visible="false">
+                  <Label fx:id="birthdayError" layoutX="156.0" layoutY="485.0" text="Vui lòng không để trống" textFill="RED" visible="false">
                      <font>
                         <Font name="Segoe UI" size="12.0" />
                      </font>
+                     <VBox.margin>
+                        <Insets left="120.0" />
+                     </VBox.margin>
                   </Label>
                   <HBox alignment="CENTER">
                      <children>
@@ -166,6 +172,9 @@
                      <font>
                         <Font name="Segoe UI" size="12.0" />
                      </font>
+                     <VBox.margin>
+                        <Insets left="120.0" />
+                     </VBox.margin>
                   </Label>
                   <HBox alignment="CENTER" layoutX="10.0" layoutY="75.0">
                      <children>
@@ -184,6 +193,9 @@
                      <font>
                         <Font name="Segoe UI" size="12.0" />
                      </font>
+                     <VBox.margin>
+                        <Insets left="120.0" />
+                     </VBox.margin>
                   </Label>
                   <HBox alignment="CENTER" layoutX="10.0" layoutY="250.0">
                      <children>
@@ -202,6 +214,9 @@
                      <font>
                         <Font name="Segoe UI" size="12.0" />
                      </font>
+                     <VBox.margin>
+                        <Insets left="120.0" />
+                     </VBox.margin>
                   </Label>
                   <HBox alignment="CENTER" layoutX="10.0" layoutY="295.0">
                      <children>
@@ -220,6 +235,9 @@
                      <font>
                         <Font name="Segoe UI" size="12.0" />
                      </font>
+                     <VBox.margin>
+                        <Insets left="120.0" />
+                     </VBox.margin>
                   </Label>
                   <HBox>
                      <children>
