--- a/src/main/resources/View/apartmentPane.fxml
+++ b/src/main/resources/View/apartmentPane.fxml
@@ -120,20 +120,28 @@
             </HBox>
          </bottom>
          <right>
-            <VBox alignment="TOP_CENTER" prefHeight="200.0">
+            <VBox alignment="CENTER_LEFT" prefHeight="200.0">
                <children>
                   <HBox alignment="CENTER">
                      <children>
-                        <Label prefWidth="120.0" text="ID Tòa">
+                        <Label prefWidth="120.0" text="Tòa">
                            <font>
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font></Label>
-                        <TextField fx:id="idTextField" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
+                        <TextField fx:id="idTextField" onKeyReleased="#apartmentTextChange" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
                      </children>
                      <VBox.margin>
-                        <Insets bottom="20.0" />
+                        <Insets />
                      </VBox.margin>
                   </HBox>
+                  <Label fx:id="apartmentError" text="Label" textFill="RED" visible="false">
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="130.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font name="Segoe UI" size="12.0" />
+                     </font>
+                  </Label>
                   <HBox alignment="CENTER">
                      <children>
                         <Label prefWidth="120.0" text="Giới tính">
@@ -184,7 +192,7 @@
                               <Insets right="10.0" />
                            </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#addApartment" prefHeight="45.0" prefWidth="150.0" styleClass="buttonindashboard" text="Thêm Mới" textFill="WHITE">
+                        <Button fx:id="addBtn" disable="true" mnemonicParsing="false" onAction="#addApartment" prefHeight="45.0" prefWidth="150.0" styleClass="buttonindashboard" text="Thêm Mới" textFill="WHITE">
       
                            <padding>
                               <Insets bottom="10.0" left="24.0" right="24.0" top="10.0" />
